Bug 376018 - Doesn't save duplex mode settings
Summary: Doesn't save duplex mode settings
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_networkmanagement (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-04 21:46 UTC by Najjar
Modified: 2024-12-23 18:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Najjar 2017-02-04 21:46:47 UTC
In wired networks the new editor doesn't save negotiation settings. In the "Wired" tab, there's an option to allow auto-negotiation for speed and duplex. The default is "Speed: automatic" and "Duplex: half".

Setting "Duplex" to Full, or ticking the "Allow auto-negotiation", then clicking apply doesn't save the setting, and as soon as moving to another connection to change it then going back to the first one, it'll be back to buggy default.
Comment 1 Jan Grulich 2017-02-06 08:17:45 UTC
I cannot reproduce that, it works and save whatever configuration I choose. What is your NetworkManager version? It might a bug there as well.
Comment 2 Najjar 2017-02-06 18:36:56 UTC
I'm on the latest stable provided in the Arch repos: 1.6.0-4
Comment 3 Jan Grulich 2017-03-21 12:06:30 UTC
Ok, I managed to reproduce this with NetworkManager 1.6.0. I will investigate that.
Comment 4 Jan Grulich 2017-03-21 12:42:22 UTC
Git commit 4e9fde6c0c459a4129e6ee1c3cc32f90e539889a by Jan Grulich.
Committed on 21/03/2017 at 12:42.
Pushed by grulich into branch 'master'.

WiredSetting: Speed and duplex can be set only when auto-negotiation is off

M  +15   -15   src/settings/wiredsetting.cpp

https://commits.kde.org/networkmanager-qt/4e9fde6c0c459a4129e6ee1c3cc32f90e539889a
Comment 5 Jan Grulich 2017-03-21 12:43:14 UTC
Git commit 427320a5d629022d2e2e228fc6f63a7f279e2b5a by Jan Grulich.
Committed on 21/03/2017 at 12:43.
Pushed by grulich into branch 'Plasma/5.9'.

WiredSetting: Speed has to be set when auto-negotiation is off

M  +12   -5    libs/editor/settings/wiredconnectionwidget.cpp

https://commits.kde.org/plasma-nm/427320a5d629022d2e2e228fc6f63a7f279e2b5a