WiredSetting: Speed has to be set when auto-negotiation is off

BUG:376018